--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-<h1>Hello iPrint Direct</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Silent web printing from iPrint.Direct</title>
+</head>
+<body>
+<h1>iPrint.Direct</h1>
+
+<h2>What is this?<h2>
+Direct printing, without interruption or confirmation, direct from your browser. No dialog boxes and zero fuss.
+
+<h2>Why do I need it?</h2>h2>
+Line of business web applications are the norm, and a solid user experience is essential. For security reasons none of the top 5 browsers support direct printing, so users will always have to work through print dialogs EVERY time they print from your application. iPrint.Direct improves the user experience by reducing the number of 'clicks' that are required to print labels and documents. Once your label has been created it can be send down to the customers computer using only JavaScript - and this means your users don't have to click anything at all. Win!
+
+
+<h2>How does it work?</h2>
+iPrint.Direct installs a small application on your computer that can acts as a middle-man between your browser application and your printer. This allows your web application to send a print job directly to your printer, using only JavaScript. The communication happens between the browser and the computer hosting the installed application. This means that you don't even need to install the application on your computer - it can be anywhere on your network. 
+
+
+<h3>Simple Integration</h3>
+: Spend more time focusing on your application and less time worrying about printing. 
+
+
+<h3>Scalable</h3>
+: iPrint.Direct solution will easily scale with you business. You can run the print client on one or more computer, and printing limits are only constrained by the page-per-minute speeds of your printers.
+
+<h3>Any printer</h3>
+: Any printer can be used with iPrint.Direct, including RAW, ZPL, EPL and PDF formats, in any size.
+
+
+<h2>Cross Platform</h2>
+
+<h3>Any systems</h3>
+iPrint.Direct can be installed on any Windows or POSIX based operating system, including;
+<ul>
+	<li>Windows 7</li>
+	<li>Windows 8</li>
+	<li>Windows 10</li>
+	<li>Mac OSX</li>
+	<li>Ubuntu</li>
+</ul>
+
+<h3>Any browser</h3>
+Works with any browser that has JavaScript and XMLHttp support, including;
+<ul>
+	<li>Chrome</li>
+	<li>Firefox</li>
+	<li>Internet Explorer</li>
+	<li>Safari</li>
+	<li>Opera</li>
+</ul>
+<h2>Pricing</h2>
+
+Pricing is *per application* integration, with the exception of a customised Enterprise agreement, which will not be restricted.
+
+<h3>Free</h3>
+<ul>
+	<li>Integration trial. Unlimited use for 30 days
+</ul>
+
+<h3>Small</h3>
+<ul>
+	<li>Price to be confirmed</li>
+	<li>up to 100 integrated accounts</li>
+	<li>Unlimited print jobs</li>
+</ul>
+
+<h3>Medium</h3>
+<ul>
+	<li>Price to be confirmed</li>
+	<li>up to 1000 integrated accounts</li>
+	<li>Unlimited print jobs</li>
+</ul>
+
+<h3>Large</h3>
+<ul>
+	<li>Price to be confirmed</li>
+	<li>up to 5000 integrated accounts</li>
+	<li>Unlimited print jobs</li>
+</ul>
+
+<h3>Enterprise</h3>
+<ul>
+	<li>Price to be confirmed</li>
+	<li>Unlimited usage</li>
+	<li>Unlimited print jobs</li>
+	<li>Unlimited applications</li>
+	<li>Unlimited integrated accounts</li>
+	<li>Escrowed source code</li>
+</ul>
+
+<h2>Downloads</h2>
+
+iPrint.Direct is currently in Beta. Download details will be available soon.
+
+<h2>Documentation</h2>
+
+Full implementation documentation is coming soon.
+
+<h2>FAQ's </h2>
+
+This sounds like Voodoo?
+: Like all great products iPrint Direct solves the printing problem in a very simple way. This can be integrated into any web application on any technology. Also the source code is open-source so you can inspect it if you wish.
+
+Is it secure?
+: Yes. Within the installed application you create a secret key, and then share this key with only the applications that are allowed to use your printers. The printers are only exposed to web applications running on your computer.
+
+Are my documents / labels uploaded to the iPrint.Direct servers?
+: No. Your documents and labels are sent directly from your browser to the locally installed application then to your printer. We save diagnostic information, but not document contents or data. The document printing process is completed wholly on-premise.
+
+Is it quick?
+: Yes. Very quick. Print speeds are usually only limited by the speed at which you can create your label, and the page speed of your printer. In testing we have achieved over 500 page per minute. 
+
+Does my printer need to be connected to my computer?
+: Yes. We support all directly connected and networked printers. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.
+
+Do you support Networked Printers?
+: Yes. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.
+
+Can I print using an iPrint.Direct service on another computer?
+: Yes. You will need to ensure that the browser (where you create your labels) can communicate with the iPrint.Direct service on the printing computer.
+
+What documents formats do you support?
+: We support PDF and RAW printing. RAW is recommended for speed.
+
+Do you support label printing?
+: Yes. We support PDF and RAW ZPL and EPL label printing. We recommend ZPL as the fastest way to print shipping and return labels.
+
+Do you support different document sizes?
+: Yes. You can print any document size through the iPrint.Direct service - this is only limited by your printer - you can't print an A1 poster on an A4 device ;-)
+
+---
+
+<footer>Copyright 2015-2016</footer>
+
+
+</body>
+</html>
