--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Silent web printing from iPrint.Direct</title>
 
@@ -26,240 +27,275 @@
 	<link href='https://fonts.googleapis.com/css?family=Merriweather:400,700,900' rel='stylesheet' type='text/css'>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
+	<!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
 
-      <script type="text/javascript">
-      	var _gaq = _gaq || [];
-      	_gaq.push(['_setAccount', 'UA-10060584-1']);
-      	_gaq.push(['_trackPageview']);
-      	(function() {
-      		var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      		ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      		var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      	})();
-      </script>
-      <style type="text/css">
-      	h1 {
-      		font-size: 2em;
-      		font:;
-      	}
-      	h2 {
-      		font-size: 1.7em;
-      		font:900;
-      	}
-      	h3 {
-      		font-size: 1.4em;
-      		font:700;
-      	}
-      	body{
-      		font-size: 1.1em;
-      		font-family: 'Merriweather', sans-serif;
-      		line-height: 2;
-      		font-weight: 400;
-      		text-transform: none;
-      		min-height: 40px;
-      		color: #555;
-      	}
-      </style>
-  </head>
+	<script type="text/javascript">
+		var _gaq = _gaq || [];
+		_gaq.push(['_setAccount', 'UA-10060584-1']);
+		_gaq.push(['_trackPageview']);
+		(function() {
+			var ga = document.createElement('script');
+			ga.type = 'text/javascript';
+			ga.async = true;
+			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			var s = document.getElementsByTagName('script')[0];
+			s.parentNode.insertBefore(ga, s);
+		})();
+	</script>
+	<style type="text/css">
+		h1 {
+			font-size: 1.8em;
+			font: ;
+		}
 
-  <body>
-  	<nav class="navbar navbar-default navbar-fixed-top">
-  		<div class="container">
-  			<div class="navbar-header">
-  				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-  					<span class="sr-only">Toggle navigation</span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  					<span class="icon-bar"></span>
-  				</button>
-  				<a class="navbar-brand" href="#">Project name</a>
-  			</div>
-  			<div id="navbar" class="collapse navbar-collapse">
-  				<ul class="nav navbar-nav">
-  					<li class="active"><a href="#">Home</a></li>
-  					<li><a href="#about">About</a></li>
-  					<li><a href="#contact">Contact</a></li>
-  					<li class="dropdown">
-  						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-  						<ul class="dropdown-menu">
-  							<li><a href="#">Action</a></li>
-  							<li><a href="#">Another action</a></li>
-  							<li><a href="#">Something else here</a></li>
-  							<li role="separator" class="divider"></li>
-  							<li class="dropdown-header">Nav header</li>
-  							<li><a href="#">Separated link</a></li>
-  							<li><a href="#">One more separated link</a></li>
-  						</ul>
-  					</li>
-  				</ul>
-  			</div><!--/.nav-collapse -->
-  		</div>
-  	</nav>
+		h2 {
+			font-size: 1.7em;
+			font: 900;
+		}
 
-  	<div class="container">
-  		<div class="page-header">
-  			<h1>What is iPrint.Direct?</h1>
-  			Direct printing, without interruption or confirmation, direct from your browser. No dialog boxes and zero fuss.
-  		</div>
+		h3 {
+			font-size: 1.4em;
+			font: 700;
+		}
 
+		body {
+			font-size: 1.1em;
+			font-family: 'Merriweather', sans-serif;
+			line-height: 2;
+			font-weight: 400;
+			text-transform: none;
+			min-height: 40px;
+			color: #555;
+		}
+	</style>
+</head>
 
+<body>
+	<br/>
+	<br/>
+	<br/>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+					<span class="sr-only">Toggle navigation</span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand" href="#">iPrint.Direct</a>
+			</div>
+			<div id="navbar" class="collapse navbar-collapse">
+				<ul class="nav navbar-nav">
+					<li class="active"><a href="#">Home</a></li>
+					<li><a href="#pricing">Pricing</a></li>
+					<li><a href="#documentation">Documentation</a></li>
+					<li><a href="#downloads">Downloads</a></li>
+					<li><a href="#faqs">FAQ's</a></li>
+				</ul>
+			</div>
+			<!--/.nav-collapse -->
+		</div>
+	</nav>
 
-  		<h2>Why do I need it?</h2>h2>
-  		<p>Line of business web applications are the norm, and a solid user experience is essential. For security reasons none of the top 5 browsers support direct printing, so users will always have to work through print dialogs EVERY time they print from your application. iPrint.Direct improves the user experience by reducing the number of 'clicks' that are required to print labels and documents. Once your label has been created it can be send down to the customers computer using only JavaScript - and this means your users don't have to click anything at all. Win!</p>
+	<div class="container">
 
+		<div class="page-header">
+			<h1>What is iPrint.Direct?</h1> Direct web printing, without interruption or confirmation, direct from your browser. No dialog boxes and zero fuss.
+		</div>
 
-  		<h2>How does it work?</h2>
-  		<p>iPrint.Direct installs a small application on your computer that can acts as a middle-man between your browser application and your printer. This allows your web application to send a print job directly to your printer, using only JavaScript. The communication happens between the browser and the computer hosting the installed application. This means that you don't even need to install the application on your computer - it can be anywhere on your network. </p>
+		<h2>Why do I need it?</h2>
+		<p>Line of business web applications are the norm, and a solid user experience is essential. For security reasons none of the top 5 browsers support direct printing, so users will always have to work through print dialogs EVERY time they print from your
+			application. iPrint.Direct improves the user experience by reducing the number of 'clicks' that are required to print labels and documents. Once your label has been created it can be send down to the customers computer using only JavaScript - and this
+			means your users don't have to click anything at all. Win!</p>
 
 
-  		<h3>Simple Integration</h3>
-  		<p>Spend more time focusing on your application and less time worrying about printing. </p>
+		<h2>How does it work?</h2>
+		<p>iPrint.Direct installs a small application on your computer that can acts as a middle-man between your browser application and your printer. This allows your web application to send a print job directly to your printer, using only JavaScript. The communication
+			happens between the browser and the computer hosting the installed application. This means that you don't even need to install the application on your computer - it can be anywhere on your network. </p>
 
 
-  		<h3>Scalable</h3>
-  		<p>iPrint.Direct solution will easily scale with you business. You can run the print client on one or more computer, and printing limits are only constrained by the page-per-minute speeds of your printers.</p>
+		<div class="row">
+			<div class="col-xs-12 col-sm-4">
+				<h3>Simple Integration</h3>
+				<p>Spend more time focusing on your application and less time worrying about printing. </p>
+			</div>
 
-  		<h3>Any printer</h3>
-  		<p>Any printer can be used with iPrint.Direct, including RAW, ZPL, EPL and PDF formats, in any size.</p>
+			<div class="col-xs-12 col-sm-4">
+				<h3>Scalable</h3>
+				<p>iPrint.Direct solution will easily scale with you business. You can run the print client on one or more computer, and printing limits are only constrained by the page-per-minute speeds of your printers.</p>
+			</div>
 
+			<div class="col-xs-12 col-sm-4">
+				<h3>Any printer</h3>
+				<p>Any printer can be used with iPrint.Direct, including RAW, ZPL, EPL and PDF formats, in any size.</p>
+			</div>
 
-  		<h2>Cross Platform</h2>
+		</div>
 
-  		<h3>Any systems</h3>
-  		iPrint.Direct can be installed on any Windows or POSIX based operating system, including;
+		<hr/>
 
-  		<ul>
-  			<li>Windows 7</li>
-  			<li>Windows 8</li>
-  			<li>Windows 10</li>
-  			<li>Mac OSX</li>
-  			<li>Ubuntu</li>
-  		</ul>
+		<h2>Cross Platform</h2>
 
-  		<h3>Any browser</h3>
-  		Works with any browser that has JavaScript and XMLHttp support, including;
+		<div class="row">
+			<div class="col-xs-12 col-sm-6">
+				<h3>Any system</h3> iPrint.Direct can be installed on any Windows or POSIX based operating system, including;
 
-  		<ul>
-  			<li>Chrome</li>
-  			<li>Firefox</li>
-  			<li>Internet Explorer</li>
-  			<li>Safari</li>
-  			<li>Opera</li>
-  		</ul>
+				<ul>
+					<li>Windows 7</li>
+					<li>Windows 8</li>
+					<li>Windows 10</li>
+					<li>Mac OSX</li>
+					<li>Ubuntu</li>
+				</ul>
 
-  		<h2>Pricing</h2>
+			</div>
+			<div class="col-xs-12 col-sm-6">
+				<h3>Any browser</h3> Works with any browser that has JavaScript and XMLHttp support, including;
 
-  		<p>Pricing is *per application* integration, with the exception of a customised Enterprise agreement, which will not be restricted.</p>
+				<ul>
+					<li>Chrome</li>
+					<li>Firefox</li>
+					<li>Internet Explorer</li>
+					<li>Safari</li>
+					<li>Opera</li>
+				</ul>
+			</div>
 
-  		<h3>Free</h3>
-  		<ul>
-  			<li>Integration trial. Unlimited use for 30 days</li>
-  		</ul>
+		</div>
 
-  		<h3>Small</h3>
-  		<ul>
-  			<li>Price to be confirmed</li>
-  			<li>up to 100 integrated accounts</li>
-  			<li>Unlimited print jobs</li>
-  		</ul>
+		<hr/>
 
-  		<h3>Medium</h3>
-  		<ul>
-  			<li>Price to be confirmed</li>
-  			<li>up to 1000 integrated accounts</li>
-  			<li>Unlimited print jobs</li>
-  		</ul>
+		<a name="pricing"></a>
+		<h2>Pricing</h2>
 
-  		<h3>Large</h3>
-  		<ul>
-  			<li>Price to be confirmed</li>
-  			<li>up to 5000 integrated accounts</li>
-  			<li>Unlimited print jobs</li>
-  		</ul>
+		<p>Pricing is per <em>application</em> integration, with the exception of a customised Enterprise agreement, which will not be restricted.</p>
 
-  		<h3>Enterprise</h3>
-  		<ul>
-  			<li>Price to be confirmed</li>
-  			<li>Unlimited usage</li>
-  			<li>Unlimited print jobs</li>
-  			<li>Unlimited applications</li>
-  			<li>Unlimited integrated accounts</li>
-  			<li>Escrowed source code</li>
-  		</ul>
+		<div class="row">
+			<div class="col-xs-12 col-sm-3">
+				<h3>Free</h3>
+				<ul>
+					<li>Integration trial</li>
+					<li>Unlimited use for 30 days</li>
+				</ul>
+			</div>
 
-  		<h2>Downloads</h2>
+			<div class="col-xs-12 col-sm-3">
+				<h3>Small</h3>
+				<ul>
+					<li>up to 100 integrated accounts</li>
+					<li>Unlimited print jobs</li>
+				</ul>
+			</div>
 
-  		<p>iPrint.Direct is currently in Beta. Download details will be available soon.</p>
+			<div class="col-xs-12 col-sm-3">
+				<h3>Medium</h3>
+				<ul>
+					<li>up to 1000 integrated accounts</li>
+					<li>Unlimited print jobs</li>
+				</ul>
+			</div>
 
-  		<h2>Documentation</h2>
+			<div class="col-xs-12 col-sm-3">
+				<h3>Large</h3>
+				<ul>
+					<li>up to 5000 integrated accounts</li>
+					<li>Unlimited print jobs</li>
+				</ul>
+			</div>
 
-  		<p>Full implementation documentation is coming soon.</p>
+		</div>
 
-  		<h2>FAQ's </h2>
+		<div class="row">
+			<div class="col-xs-12">
+				<h3>Enterprise</h3>
+				<ul>
+					<li>Unlimited usage</li>
+					<li>Unlimited print jobs</li>
+					<li>Unlimited applications</li>
+					<li>Unlimited integrated accounts</li>
+					<li>Escrowed source code</li>
+				</ul>
+			</div>
+		</div>
 
-  		<dl>
-  			<dt>This sounds like Voodoo?</dt>
-  			<dd>Like all great products iPrint Direct solves the printing problem in a very simple way. This can be integrated into any web application on any technology. Also the source code is open-source so you can inspect it if you wish.</dd>
-  		</dl>
+		<hr/>
+		<a name="downloads"></a>
+		<h2>Downloads</h2>
 
-  		<dl>
-  			<dt>Is it secure?</dt>
-  			<dd>Yes. Within the installed application you create a secret key, and then share this key with only the applications that are allowed to use your printers. The printers are only exposed to web applications running on your computer.</dd>
-  		</dl>
+		<p>iPrint.Direct is currently in Beta. Download details will be available soon.</p>
 
-  		<dl>
-  			<dt>Are my documents / labels uploaded to the iPrint.Direct servers?</dt>
-  			<dd>No. Your documents and labels are sent directly from your browser to the locally installed application then to your printer. We save diagnostic information, but not document contents or data. The document printing process is completed wholly on-premise.</dd>
-  		</dl>
+		<hr/>
 
-  		<dl>
-  			<dt>Is it quick?</dt>
-  			<dd>Yes. Very quick. Print speeds are usually only limited by the speed at which you can create your label, and the page speed of your printer. In testing we have achieved over 500 page per minute. </dd>
-  		</dl>
+		<h2>Documentation</h2>
 
-  		<dl>
-  			<dt>Does my printer need to be connected to my computer?</dt>
-  			<dd>Yes. We support all directly connected and networked printers. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.</dd>
-  		</dl>
+		<p>Full implementation documentation is coming soon.</p>
 
-  		<dl>
-  			<dt>Do you support Networked Printers?</dt>
-  			<dd>Yes. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.</dd>
-  		</dl>
+		<hr/>
+		<a name="faqs"></a>
+		<h2>FAQ's </h2>
 
-  		<dl>
-  			<dt>Can I print using an iPrint.Direct service on another computer?</dt>
-  			<dd>Yes. You will need to ensure that the browser (where you create your labels) can communicate with the iPrint.Direct service on the printing computer.</dd>
-  		</dl>
+		<dl>
+			<dt>This sounds like Voodoo?</dt>
+			<dd>Like all great products iPrint Direct solves the printing problem in a very simple way. This can be integrated into any web application on any technology. Also the source code is open-source so you can inspect it if you wish.</dd>
+		</dl>
 
-  		<dl>
-  			<dt>What documents formats do you support?</dt>
-  			<dd>We support PDF and RAW printing. RAW is recommended for speed.</dd>
-  		</dl>
+		<dl>
+			<dt>Is it secure?</dt>
+			<dd>Yes. Within the installed application you create a secret key, and then share this key with only the applications that are allowed to use your printers. The printers are only exposed to web applications running on your computer.</dd>
+		</dl>
 
-  		<dl>
-  			<dt>Do you support label printing?</dt>
-  			<dd>Yes. We support PDF and RAW ZPL and EPL label printing. We recommend ZPL as the fastest way to print shipping and return labels.</dd>
-  		</dl>
+		<dl>
+			<dt>Are my documents / labels uploaded to the iPrint.Direct servers?</dt>
+			<dd>No. Your documents and labels are sent directly from your browser to the locally installed application then to your printer. We save diagnostic information, but not document contents or data. The document printing process is completed wholly on-premise.</dd>
+		</dl>
 
-  		<dl>
-  			<dt>Do you support different document sizes?</dt>
-  			<dd>Yes. You can print any document size through the iPrint.Direct service - this is only limited by your printer - you can't print an A1 poster on an A4 device ;-)</dd>
-  		</dl>
+		<dl>
+			<dt>Is it quick?</dt>
+			<dd>Yes. Very quick. Print speeds are usually only limited by the speed at which you can create your label, and the page speed of your printer. In testing we have achieved over 500 page per minute. </dd>
+		</dl>
 
-  	</div>
+		<dl>
+			<dt>Does my printer need to be connected to my computer?</dt>
+			<dd>Yes. We support all directly connected and networked printers. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.</dd>
+		</dl>
 
+		<dl>
+			<dt>Do you support Networked Printers?</dt>
+			<dd>Yes. If you can see the printer in your Printer Settings screen, you can connect to it via iPrint.Direct.</dd>
+		</dl>
 
-  	<footer class="footer">
-  		<div class="container">
-  			<p class="text-muted">PCopyright 2015-2016</p>
-  		</div>
-  	</footer>
+		<dl>
+			<dt>Can I print using an iPrint.Direct service on another computer?</dt>
+			<dd>Yes. You will need to ensure that the browser (where you create your labels) can communicate with the iPrint.Direct service on the printing computer.</dd>
+		</dl>
 
+		<dl>
+			<dt>What documents formats do you support?</dt>
+			<dd>We support PDF and RAW printing. RAW is recommended for speed.</dd>
+		</dl>
 
-  </body>
+		<dl>
+			<dt>Do you support label printing?</dt>
+			<dd>Yes. We support PDF and RAW ZPL and EPL label printing. We recommend ZPL as the fastest way to print shipping and return labels.</dd>
+		</dl>
+
+		<dl>
+			<dt>Do you support different document sizes?</dt>
+			<dd>Yes. You can print any document size through the iPrint.Direct service - this is only limited by your printer - you can't print an A1 poster on an A4 device ;-)</dd>
+		</dl>
+
+	</div>
+
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">iPrint.Direct Copyright 2015-2016</p>
+		</div>
+	</footer>
+
+</body>
+
 </html>
